# sasd

./: Cargo.toml  README.md  appveyor.yml
files/: test.toml
src/: error.rs  main.rs  settings.rs  state.rs
src/os/: mod.rs
src/os/unix/: mod.rs
src/os/windows/: mod.rs
src/os/windows/protocol/: mod.rs
src/os/windows/protocol/v1/: mod.rs
src/protocol/: mod.rs
src/protocol/v1/: mod.rs  plaintext.rs
src/rpc/: mod.rs  v1.rs
src/test/: mod.rs
src/test/os/: mod.rs
src/test/os/windows/: mod.rs
src/test/os/windows/protocol/: mod.rs
src/test/os/windows/protocol/v1/: mod.rs
src/test/protocol/: mod.rs  start.rs  state.rs  statevalue.rs
src/test/protocol/v1/: mod.rs  statevalue.rs
src/test/settings/: mod.rs  unixbuilder.rs  windowsbuilder.rs
