[package]
name = "sasd"
version = "0.1.0"
authors = ["Ariel De Ocampo <arielmakestuff@gmail.com>"]

[dependencies]
error-chain = "0.11"

[dependencies.siminau-rpc]
git = "https://github.com/Siminau/siminau-rpc"
branch = "develop"

[dependencies.siminau-rpc-derive]
git = "https://github.com/Siminau/siminau-rpc"
branch = "develop"
