[package]
name = "sasd"
version = "0.1.0"
authors = ["Ariel De Ocampo <arielmakestuff@gmail.com>"]

[dependencies]
error-chain = "0.11"
appdirs = "0.2"
config = "0.7"
serde = "1"
serde_derive = "1"

[dependencies.siminau-rpc]
git = "https://github.com/Siminau/siminau-rpc"
# branch = "develop"
rev = "de9eaf388fc"

[dependencies.siminau-rpc-derive]
git = "https://github.com/Siminau/siminau-rpc"
# branch = "develop"
rev = "de9eaf388fc"

[dependencies.rmpv]
version = "0.4"
features = ["with-serde"]

[dev-dependencies]
quickcheck = "0.4"
matches = "0.1"
tempdir = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
rand = "0.3"

[target.'cfg(windows)'.dependencies.hex]
git = "https://github.com/KokaKiwi/rust-hex"
rev = "2ac113ce01eb2f1f4a8fed5845ef20f1202ec5cc"
